--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -43,9 +43,7 @@
         "signupAttributes": [
           "EMAIL"
         ],
-        "socialProviders": [
-          "GOOGLE"
-        ],
+        "socialProviders": [],
         "usernameAttributes": [
           "EMAIL"
         ],
