--- a/amplify/backend/function/myapplicationsecretaawsAmplify/myapplicationsecretaawsAmplify-awscloudformation-template.json
+++ b/amplify/backend/function/myapplicationsecretaawsAmplify/myapplicationsecretaawsAmplify-awscloudformation-template.json
@@ -20,23 +20,19 @@
     }
   },
   "Resources": {
-    "LambdaLayerVersion5d74da70": {
+    "LambdaLayerVersion6cc71e60": {
       "Type": "AWS::Lambda::LayerVersion",
       "Properties": {
-        "CompatibleRuntimes": {
-          "Ref": "runtimes"
-        },
+        "CompatibleRuntimes": [
+          "nodejs14.x"
+        ],
         "Content": {
           "S3Bucket": {
             "Ref": "deploymentBucketName"
           },
-          "S3Key": {
-            "Ref": "s3Key"
-          }
+          "S3Key": "amplify-builds/myapplicationsecretaawsAmplify-LambdaLayerVersion6cc71e60-build.zip"
         },
-        "Description": {
-          "Ref": "description"
-        },
+        "Description": "Updated layer version 2023-01-03T03:24:22.891Z",
         "LayerName": {
           "Fn::Sub": [
             "myapplicationsecretaawsAmplify-${env}",
@@ -51,13 +47,11 @@
       "DeletionPolicy": "Delete",
       "UpdateReplacePolicy": "Retain"
     },
-    "LambdaLayerPermissionPrivate5d74da70": {
+    "LambdaLayerPermissionPrivate6cc71e60": {
       "Type": "AWS::Lambda::LayerVersionPermission",
       "Properties": {
         "Action": "lambda:GetLayerVersion",
-        "LayerVersionArn": {
-          "Ref": "LambdaLayerVersion5d74da70"
-        },
+        "LayerVersionArn": "arn:aws:lambda:us-east-1:280695598000:layer:myapplicationsecretaawsAmplify-staging:5",
         "Principal": {
           "Ref": "AWS::AccountId"
         }
@@ -67,7 +61,7 @@
   "Outputs": {
     "Arn": {
       "Value": {
-        "Ref": "LambdaLayerVersion5d74da70"
+        "Ref": "LambdaLayerVersion6cc71e60"
       }
     }
   }
