--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
     "@types/node": "16.7.13",
     "@types/react": "18.0.0",
     "@types/react-dom": "18.0.0",
-    "aws-amplify": "^5.0.8",
-    "node-fetch": "^3.3.0",
+    "aws-amplify": "5.0.8",
+    "node-fetch": "3.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.41.3",
+    "react-router-dom": "6.6.1",
     "react-scripts": "5.0.1",
     "typescript": "4.4.2",
     "web-vitals": "2.1.0"
