--- a/amplify/backend/function/myapplicationsecretafuse/myapplicationsecretafuse-awscloudformation-template.json
+++ b/amplify/backend/function/myapplicationsecretafuse/myapplicationsecretafuse-awscloudformation-template.json
@@ -20,23 +20,19 @@
     }
   },
   "Resources": {
-    "LambdaLayerVersion1f133fba": {
+    "LambdaLayerVersion780dc652": {
       "Type": "AWS::Lambda::LayerVersion",
       "Properties": {
-        "CompatibleRuntimes": {
-          "Ref": "runtimes"
-        },
+        "CompatibleRuntimes": [
+          "nodejs14.x"
+        ],
         "Content": {
           "S3Bucket": {
             "Ref": "deploymentBucketName"
           },
-          "S3Key": {
-            "Ref": "s3Key"
-          }
+          "S3Key": "amplify-builds/myapplicationsecretafuse-LambdaLayerVersion780dc652-build.zip"
         },
-        "Description": {
-          "Ref": "description"
-        },
+        "Description": "Updated layer version 2023-01-10T05:41:13.045Z",
         "LayerName": {
           "Fn::Sub": [
             "myapplicationsecretafuse-${env}",
@@ -51,13 +47,21 @@
       "DeletionPolicy": "Delete",
       "UpdateReplacePolicy": "Retain"
     },
-    "LambdaLayerPermissionPrivate1f133fba": {
+    "LambdaLayerPermissionPrivate780dc652": {
       "Type": "AWS::Lambda::LayerVersionPermission",
       "Properties": {
         "Action": "lambda:GetLayerVersion",
-        "LayerVersionArn": {
-          "Ref": "LambdaLayerVersion1f133fba"
-        },
+        "LayerVersionArn": "arn:aws:lambda:us-east-1:280695598000:layer:myapplicationsecretafuse-staging:17",
+        "Principal": {
+          "Ref": "AWS::AccountId"
+        }
+      }
+    },
+    "LambdaLayerPermissionPrivateLegacy16": {
+      "Type": "AWS::Lambda::LayerVersionPermission",
+      "Properties": {
+        "Action": "lambda:GetLayerVersion",
+        "LayerVersionArn": "arn:aws:lambda:us-east-1:280695598000:layer:myapplicationsecretafuse-staging:16",
         "Principal": {
           "Ref": "AWS::AccountId"
         }
@@ -67,7 +71,7 @@
   "Outputs": {
     "Arn": {
       "Value": {
-        "Ref": "LambdaLayerVersion1f133fba"
+        "Ref": "LambdaLayerVersion780dc652"
       }
     }
   }
