--- a/amplify/backend/function/myapplicationsecretaawsAmplify/myapplicationsecretaawsAmplify-awscloudformation-template.json
+++ b/amplify/backend/function/myapplicationsecretaawsAmplify/myapplicationsecretaawsAmplify-awscloudformation-template.json
@@ -20,19 +20,23 @@
     }
   },
   "Resources": {
-    "LambdaLayerVersion446a8c6f": {
+    "LambdaLayerVersion598ae4bd": {
       "Type": "AWS::Lambda::LayerVersion",
       "Properties": {
-        "CompatibleRuntimes": [
-          "nodejs14.x"
-        ],
+        "CompatibleRuntimes": {
+          "Ref": "runtimes"
+        },
         "Content": {
           "S3Bucket": {
             "Ref": "deploymentBucketName"
           },
-          "S3Key": "amplify-builds/myapplicationsecretaawsAmplify-LambdaLayerVersion446a8c6f-build.zip"
+          "S3Key": {
+            "Ref": "s3Key"
+          }
         },
-        "Description": "Updated layer version 2023-01-10T05:41:13.045Z",
+        "Description": {
+          "Ref": "description"
+        },
         "LayerName": {
           "Fn::Sub": [
             "myapplicationsecretaawsAmplify-${env}",
@@ -47,21 +51,13 @@
       "DeletionPolicy": "Delete",
       "UpdateReplacePolicy": "Retain"
     },
-    "LambdaLayerPermissionPrivate446a8c6f": {
+    "LambdaLayerPermissionPrivate598ae4bd": {
       "Type": "AWS::Lambda::LayerVersionPermission",
       "Properties": {
         "Action": "lambda:GetLayerVersion",
-        "LayerVersionArn": "arn:aws:lambda:us-east-1:280695598000:layer:myapplicationsecretaawsAmplify-staging:15",
-        "Principal": {
-          "Ref": "AWS::AccountId"
-        }
-      }
-    },
-    "LambdaLayerPermissionPrivateLegacy14": {
-      "Type": "AWS::Lambda::LayerVersionPermission",
-      "Properties": {
-        "Action": "lambda:GetLayerVersion",
-        "LayerVersionArn": "arn:aws:lambda:us-east-1:280695598000:layer:myapplicationsecretaawsAmplify-staging:14",
+        "LayerVersionArn": {
+          "Ref": "LambdaLayerVersion598ae4bd"
+        },
         "Principal": {
           "Ref": "AWS::AccountId"
         }
@@ -71,7 +67,7 @@
   "Outputs": {
     "Arn": {
       "Value": {
-        "Ref": "LambdaLayerVersion446a8c6f"
+        "Ref": "LambdaLayerVersion598ae4bd"
       }
     }
   }
