client auth works

--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@aws-amplify/ui-react": "^4.3.3",
-    "@emotion/react": "^11.10.5",
-    "@emotion/styled": "^11.10.5",
+    "@aws-amplify/ui-react": "4.3.3",
+    "@emotion/react": "11.10.5",
+    "@emotion/styled": "11.10.5",
     "@mui/material": "5.11.2",
     "@testing-library/jest-dom": "5.14.1",
     "@testing-library/react": "13.0.0",
@@ -14,7 +14,10 @@
     "@types/node": "16.7.13",
     "@types/react": "18.0.0",
     "@types/react-dom": "18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.48.1",
+    "@typescript-eslint/parser": "^5.48.1",
     "aws-amplify": "5.0.8",
+    "eslint": "^8.31.0",
     "node-fetch": "3.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
