--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-hook-form": "7.41.3",
     "react-router-dom": "6.6.1",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.6",
     "typescript": "4.4.2",
     "web-vitals": "2.1.0"
   },
@@ -50,5 +51,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.26"
   }
 }
