--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "@types/node": "16.7.13",
     "@types/react": "18.0.0",
     "@types/react-dom": "18.0.0",
-    "@typescript-eslint/eslint-plugin": "^5.48.1",
-    "@typescript-eslint/parser": "^5.48.1",
+    "@types/react-router-dom": "5.3.3",
+    "@typescript-eslint/eslint-plugin": "5.48.1",
+    "@typescript-eslint/parser": "5.48.1",
     "aws-amplify": "5.0.8",
     "eslint": "^8.31.0",
     "node-fetch": "3.3.0",
@@ -24,7 +25,7 @@
     "react-hook-form": "7.41.3",
     "react-router-dom": "6.6.1",
     "react-scripts": "5.0.1",
-    "styled-components": "^5.3.6",
+    "styled-components": "5.3.6",
     "typescript": "4.4.2",
     "web-vitals": "2.1.0"
   },
