--- a/amplify/backend/function/myapplicationsecretaawsAmplify/myapplicationsecretaawsAmplify-awscloudformation-template.json
+++ b/amplify/backend/function/myapplicationsecretaawsAmplify/myapplicationsecretaawsAmplify-awscloudformation-template.json
@@ -23,16 +23,20 @@
     "LambdaLayerVersion151613cf": {
       "Type": "AWS::Lambda::LayerVersion",
       "Properties": {
-        "CompatibleRuntimes": [
-          "nodejs14.x"
-        ],
+        "CompatibleRuntimes": {
+          "Ref": "runtimes"
+        },
         "Content": {
           "S3Bucket": {
             "Ref": "deploymentBucketName"
           },
-          "S3Key": "amplify-builds/myapplicationsecretaawsAmplify-LambdaLayerVersion151613cf-build.zip"
+          "S3Key": {
+            "Ref": "s3Key"
+          }
         },
-        "Description": "Updated layer version 2023-01-16T23:43:01.646Z",
+        "Description": {
+          "Ref": "description"
+        },
         "LayerName": {
           "Fn::Sub": [
             "myapplicationsecretaawsAmplify-${env}",
@@ -51,17 +55,9 @@
       "Type": "AWS::Lambda::LayerVersionPermission",
       "Properties": {
         "Action": "lambda:GetLayerVersion",
-        "LayerVersionArn": "arn:aws:lambda:us-east-1:280695598000:layer:myapplicationsecretaawsAmplify-staging:24",
-        "Principal": {
-          "Ref": "AWS::AccountId"
-        }
-      }
-    },
-    "LambdaLayerPermissionPrivateLegacy14": {
-      "Type": "AWS::Lambda::LayerVersionPermission",
-      "Properties": {
-        "Action": "lambda:GetLayerVersion",
-        "LayerVersionArn": "arn:aws:lambda:us-east-1:280695598000:layer:myapplicationsecretaawsAmplify-staging:14",
+        "LayerVersionArn": {
+          "Ref": "LambdaLayerVersion151613cf"
+        },
         "Principal": {
           "Ref": "AWS::AccountId"
         }
