--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-hook-form": "7.41.3",
     "react-router-dom": "6.6.1",
     "react-scripts": "5.0.1",
+    "styled-components": "^5.3.6",
     "typescript": "4.4.2",
     "web-vitals": "2.1.0"
   },
