--- a/amplify/backend/function/myapplicationsecretaawsAmplify/myapplicationsecretaawsAmplify-awscloudformation-template.json
+++ b/amplify/backend/function/myapplicationsecretaawsAmplify/myapplicationsecretaawsAmplify-awscloudformation-template.json
@@ -20,23 +20,19 @@
     }
   },
   "Resources": {
-    "LambdaLayerVersionc8edf0c8": {
+    "LambdaLayerVersion0a71cf83": {
       "Type": "AWS::Lambda::LayerVersion",
       "Properties": {
-        "CompatibleRuntimes": {
-          "Ref": "runtimes"
-        },
+        "CompatibleRuntimes": [
+          "nodejs14.x"
+        ],
         "Content": {
           "S3Bucket": {
             "Ref": "deploymentBucketName"
           },
-          "S3Key": {
-            "Ref": "s3Key"
-          }
+          "S3Key": "amplify-builds/myapplicationsecretaawsAmplify-LambdaLayerVersion0a71cf83-build.zip"
         },
-        "Description": {
-          "Ref": "description"
-        },
+        "Description": "Updated layer version 2023-01-21T02:13:50.994Z",
         "LayerName": {
           "Fn::Sub": [
             "myapplicationsecretaawsAmplify-${env}",
@@ -51,13 +47,21 @@
       "DeletionPolicy": "Delete",
       "UpdateReplacePolicy": "Retain"
     },
-    "LambdaLayerPermissionPrivatec8edf0c8": {
+    "LambdaLayerPermissionPrivate0a71cf83": {
       "Type": "AWS::Lambda::LayerVersionPermission",
       "Properties": {
         "Action": "lambda:GetLayerVersion",
-        "LayerVersionArn": {
-          "Ref": "LambdaLayerVersionc8edf0c8"
-        },
+        "LayerVersionArn": "arn:aws:lambda:us-east-1:280695598000:layer:myapplicationsecretaawsAmplify-staging:30",
+        "Principal": {
+          "Ref": "AWS::AccountId"
+        }
+      }
+    },
+    "LambdaLayerPermissionPrivateLegacy14": {
+      "Type": "AWS::Lambda::LayerVersionPermission",
+      "Properties": {
+        "Action": "lambda:GetLayerVersion",
+        "LayerVersionArn": "arn:aws:lambda:us-east-1:280695598000:layer:myapplicationsecretaawsAmplify-staging:14",
         "Principal": {
           "Ref": "AWS::AccountId"
         }
@@ -67,7 +71,7 @@
   "Outputs": {
     "Arn": {
       "Value": {
-        "Ref": "LambdaLayerVersionc8edf0c8"
+        "Ref": "LambdaLayerVersion0a71cf83"
       }
     }
   }
