--- a/amplify/backend/function/myapplicationsecretaawsAmplify/myapplicationsecretaawsAmplify-awscloudformation-template.json
+++ b/amplify/backend/function/myapplicationsecretaawsAmplify/myapplicationsecretaawsAmplify-awscloudformation-template.json
@@ -20,19 +20,23 @@
     }
   },
   "Resources": {
-    "LambdaLayerVersion0a71cf83": {
+    "LambdaLayerVersione1658717": {
       "Type": "AWS::Lambda::LayerVersion",
       "Properties": {
-        "CompatibleRuntimes": [
-          "nodejs14.x"
-        ],
+        "CompatibleRuntimes": {
+          "Ref": "runtimes"
+        },
         "Content": {
           "S3Bucket": {
             "Ref": "deploymentBucketName"
           },
-          "S3Key": "amplify-builds/myapplicationsecretaawsAmplify-LambdaLayerVersion0a71cf83-build.zip"
+          "S3Key": {
+            "Ref": "s3Key"
+          }
         },
-        "Description": "Updated layer version 2023-01-21T02:13:50.994Z",
+        "Description": {
+          "Ref": "description"
+        },
         "LayerName": {
           "Fn::Sub": [
             "myapplicationsecretaawsAmplify-${env}",
@@ -47,21 +51,13 @@
       "DeletionPolicy": "Delete",
       "UpdateReplacePolicy": "Retain"
     },
-    "LambdaLayerPermissionPrivate0a71cf83": {
+    "LambdaLayerPermissionPrivatee1658717": {
       "Type": "AWS::Lambda::LayerVersionPermission",
       "Properties": {
         "Action": "lambda:GetLayerVersion",
-        "LayerVersionArn": "arn:aws:lambda:us-east-1:280695598000:layer:myapplicationsecretaawsAmplify-staging:30",
-        "Principal": {
-          "Ref": "AWS::AccountId"
-        }
-      }
-    },
-    "LambdaLayerPermissionPrivateLegacy14": {
-      "Type": "AWS::Lambda::LayerVersionPermission",
-      "Properties": {
-        "Action": "lambda:GetLayerVersion",
-        "LayerVersionArn": "arn:aws:lambda:us-east-1:280695598000:layer:myapplicationsecretaawsAmplify-staging:14",
+        "LayerVersionArn": {
+          "Ref": "LambdaLayerVersione1658717"
+        },
         "Principal": {
           "Ref": "AWS::AccountId"
         }
@@ -71,7 +67,7 @@
   "Outputs": {
     "Arn": {
       "Value": {
-        "Ref": "LambdaLayerVersion0a71cf83"
+        "Ref": "LambdaLayerVersione1658717"
       }
     }
   }
