--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -29,6 +29,14 @@
           "additionalAuthenticationProviders": [
             {
               "authenticationType": "AWS_IAM"
+            },
+            {
+              "authenticationType": "API_KEY",
+              "apiKeyConfig": {
+                "apiKeyExpirationDays": 30,
+                "apiKeyExpirationDate": "2023-02-21T01:03:35.314Z",
+                "description": "userKey"
+              }
             }
           ],
           "defaultAuthentication": {
