added layer and cognito aws-sdl lambda trigger

--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -31,12 +31,12 @@
               "authenticationType": "AWS_IAM"
             },
             {
-              "authenticationType": "API_KEY",
               "apiKeyConfig": {
-                "apiKeyExpirationDays": 30,
                 "apiKeyExpirationDate": "2023-02-21T01:03:35.314Z",
+                "apiKeyExpirationDays": 30,
                 "description": "userKey"
-              }
+              },
+              "authenticationType": "API_KEY"
             }
           ],
           "defaultAuthentication": {
@@ -132,6 +132,26 @@
       "build": true,
       "providerPlugin": "awscloudformation",
       "service": "LambdaLayer"
+    },
+    "myapplicationsecretaawsSdk": {
+      "providerPlugin": "awscloudformation",
+      "service": "LambdaLayer",
+      "build": true
+    },
+    "addUserToGroupOnSignUp": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda",
+      "dependsOn": [
+        {
+          "category": "api",
+          "resourceName": "myapplicationsecretaryamplify",
+          "attributes": [
+            "GraphQLAPIIdOutput",
+            "GraphQLAPIEndpointOutput"
+          ]
+        }
+      ]
     }
   },
   "parameters": {
