--- a/amplify/backend/backend-config.json
+++ b/amplify/backend/backend-config.json
@@ -123,7 +123,27 @@
       "providerPlugin": "awscloudformation",
       "service": "Lambda"
     },
+    "addUserToGroupOnSignUp": {
+      "build": true,
+      "dependsOn": [
+        {
+          "attributes": [
+            "GraphQLAPIIdOutput",
+            "GraphQLAPIEndpointOutput"
+          ],
+          "category": "api",
+          "resourceName": "myapplicationsecretaryamplify"
+        }
+      ],
+      "providerPlugin": "awscloudformation",
+      "service": "Lambda"
+    },
     "myapplicationsecretaawsAmplify": {
+      "build": true,
+      "providerPlugin": "awscloudformation",
+      "service": "LambdaLayer"
+    },
+    "myapplicationsecretaawsSdk": {
       "build": true,
       "providerPlugin": "awscloudformation",
       "service": "LambdaLayer"
@@ -132,26 +152,6 @@
       "build": true,
       "providerPlugin": "awscloudformation",
       "service": "LambdaLayer"
-    },
-    "myapplicationsecretaawsSdk": {
-      "providerPlugin": "awscloudformation",
-      "service": "LambdaLayer",
-      "build": true
-    },
-    "addUserToGroupOnSignUp": {
-      "build": true,
-      "providerPlugin": "awscloudformation",
-      "service": "Lambda",
-      "dependsOn": [
-        {
-          "category": "api",
-          "resourceName": "myapplicationsecretaryamplify",
-          "attributes": [
-            "GraphQLAPIIdOutput",
-            "GraphQLAPIEndpointOutput"
-          ]
-        }
-      ]
     }
   },
   "parameters": {
@@ -171,6 +171,22 @@
         }
       ]
     },
+    "AMPLIFY_function_addUserToGroupOnSignUp_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "addUserToGroupOnSignUp"
+        }
+      ]
+    },
+    "AMPLIFY_function_addUserToGroupOnSignUp_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "addUserToGroupOnSignUp"
+        }
+      ]
+    },
     "AMPLIFY_function_myapplicationsecretaawsAmplify_deploymentBucketName": {
       "usedBy": [
         {
@@ -184,6 +200,22 @@
         {
           "category": "function",
           "resourceName": "myapplicationsecretaawsAmplify"
+        }
+      ]
+    },
+    "AMPLIFY_function_myapplicationsecretaawsSdk_deploymentBucketName": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "myapplicationsecretaawsSdk"
+        }
+      ]
+    },
+    "AMPLIFY_function_myapplicationsecretaawsSdk_s3Key": {
+      "usedBy": [
+        {
+          "category": "function",
+          "resourceName": "myapplicationsecretaawsSdk"
         }
       ]
     },
