--- a/amplify/backend/function/myapplicationsecretaawsSdk/myapplicationsecretaawsSdk-awscloudformation-template.json
+++ b/amplify/backend/function/myapplicationsecretaawsSdk/myapplicationsecretaawsSdk-awscloudformation-template.json
@@ -1,6 +1,6 @@
 {
   "AWSTemplateFormatVersion": "2010-09-09",
-  "Description": "{\"createdOn\":\"Mac\",\"createdBy\":\"Amplify\",\"createdWith\":\"10.5.2\",\"stackType\":\"function-LambdaLayer\",\"metadata\":{}}",
+  "Description": "Lambda layer resource stack creation using Amplify CLI",
   "Parameters": {
     "env": {
       "Type": "String"
@@ -20,23 +20,19 @@
     }
   },
   "Resources": {
-    "LambdaLayerVersion03a17f16": {
+    "LambdaLayerVersion819d2329": {
       "Type": "AWS::Lambda::LayerVersion",
       "Properties": {
-        "CompatibleRuntimes": {
-          "Ref": "runtimes"
-        },
+        "CompatibleRuntimes": [
+          "nodejs14.x"
+        ],
         "Content": {
           "S3Bucket": {
             "Ref": "deploymentBucketName"
           },
-          "S3Key": {
-            "Ref": "s3Key"
-          }
+          "S3Key": "amplify-builds/myapplicationsecretaawsSdk-LambdaLayerVersion819d2329-build.zip"
         },
-        "Description": {
-          "Ref": "description"
-        },
+        "Description": "Updated layer version 2023-01-23T02:35:37.017Z",
         "LayerName": {
           "Fn::Sub": [
             "myapplicationsecretaawsSdk-${env}",
@@ -51,13 +47,11 @@
       "DeletionPolicy": "Delete",
       "UpdateReplacePolicy": "Retain"
     },
-    "LambdaLayerPermissionPrivate03a17f16": {
+    "LambdaLayerPermissionPrivate819d2329": {
       "Type": "AWS::Lambda::LayerVersionPermission",
       "Properties": {
         "Action": "lambda:GetLayerVersion",
-        "LayerVersionArn": {
-          "Ref": "LambdaLayerVersion03a17f16"
-        },
+        "LayerVersionArn": "arn:aws:lambda:us-east-1:280695598000:layer:myapplicationsecretaawsSdk-staging:6",
         "Principal": {
           "Ref": "AWS::AccountId"
         }
@@ -67,7 +61,7 @@
   "Outputs": {
     "Arn": {
       "Value": {
-        "Ref": "LambdaLayerVersion03a17f16"
+        "Ref": "LambdaLayerVersion819d2329"
       }
     }
   }
