--- a/amplify/backend/function/myapplicationsecretanodeFetch/myapplicationsecretanodeFetch-awscloudformation-template.json
+++ b/amplify/backend/function/myapplicationsecretanodeFetch/myapplicationsecretanodeFetch-awscloudformation-template.json
@@ -20,19 +20,23 @@
     }
   },
   "Resources": {
-    "LambdaLayerVersioncb15c9ea": {
+    "LambdaLayerVersion24a146be": {
       "Type": "AWS::Lambda::LayerVersion",
       "Properties": {
-        "CompatibleRuntimes": [
-          "nodejs14.x"
-        ],
+        "CompatibleRuntimes": {
+          "Ref": "runtimes"
+        },
         "Content": {
           "S3Bucket": {
             "Ref": "deploymentBucketName"
           },
-          "S3Key": "amplify-builds/myapplicationsecretanodeFetch-LambdaLayerVersioncb15c9ea-build.zip"
+          "S3Key": {
+            "Ref": "s3Key"
+          }
         },
-        "Description": "Updated layer version 2023-01-23T02:35:37.017Z",
+        "Description": {
+          "Ref": "description"
+        },
         "LayerName": {
           "Fn::Sub": [
             "myapplicationsecretanodeFetch-${env}",
@@ -47,11 +51,13 @@
       "DeletionPolicy": "Delete",
       "UpdateReplacePolicy": "Retain"
     },
-    "LambdaLayerPermissionPrivatecb15c9ea": {
+    "LambdaLayerPermissionPrivate24a146be": {
       "Type": "AWS::Lambda::LayerVersionPermission",
       "Properties": {
         "Action": "lambda:GetLayerVersion",
-        "LayerVersionArn": "arn:aws:lambda:us-east-1:280695598000:layer:myapplicationsecretanodeFetch-staging:2",
+        "LayerVersionArn": {
+          "Ref": "LambdaLayerVersion24a146be"
+        },
         "Principal": {
           "Ref": "AWS::AccountId"
         }
@@ -61,7 +67,7 @@
   "Outputs": {
     "Arn": {
       "Value": {
-        "Ref": "LambdaLayerVersioncb15c9ea"
+        "Ref": "LambdaLayerVersion24a146be"
       }
     }
   }
