--- a/amplify/.config/project-config.json
+++ b/amplify/.config/project-config.json
@@ -9,7 +9,7 @@
     "framework": "react",
     "config": {
       "SourceDir": "src",
-      "DistributionDir": "build",
+      "DistributionDir": ".next",
       "BuildCommand": "npm run build",
       "StartCommand": "npm run start"
     }
