--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,8 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    "next.config.js"
+    "next.config.js",
+    "src/ui-components/*"
   ],
   "exclude": ["node_modules"]
 }
